--- a/three-project/css/main.css
+++ b/three-project/css/main.css
@@ -1,9 +1,23 @@
-.column {
-  float: left;
-  width: 50%;
+canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+*[data-diagram] {
+  display: inline-block;
+  width: 5em;
+  height: 3em;
+}
+.left {
+  float: left;
+  margin-right: .25em;
+}
+.right {
+  float: right;
+  margin-left: .25em;
+}
+p {
+  margin: 1em auto;
+  max-width: 500px;
+  /* font-size: xx-large; */
 }
