rotated primary node to 12oclock from 3oclock

--- a/styles/main.css
+++ b/styles/main.css
@@ -17,7 +17,7 @@
   grid-template-columns: auto auto auto;
   grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px;
   gap: 10px;
-  background-color: #2196F3;
+  background-color: #faed8a;
   padding: 10px;
 }
 
