--- a/styles/main.css
+++ b/styles/main.css
@@ -48,8 +48,10 @@ label {
     font-size: large;
 }
 
-output {
-  display: inline;
+p {
+  margin: 1em auto;
+  max-width: 500px;
+  font-size: large;
 }
 
 /* .sBtn {
