--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,7 @@
-/* canvas {
-    width: 100%;
-    height: 100%;
-    display: block;
-} */
-
-/* .left {
-    float: left;
+* {
+  margin: 0;
+  padding: 0;
 }
-
-.right {
-    float: right;
-} */
 
 .grid-container {
   display: grid;
@@ -53,13 +44,3 @@ p {
   max-width: 500px;
   font-size: large;
 }
-
-/* .sBtn {
-    font-size: xx-large;
-} */
-
-/* #scene-container {
-  position: relative;
-  width: 50%;
-  height: 100%;
-} */
