--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
-  grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px;
+  grid-template-rows: 250px 250px 250px 250px;
   gap: 10px;
   background-color: #faed8a;
   padding: 10px;
@@ -23,14 +23,14 @@
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
-  grid-row-end: 9;
+  grid-row-end: 4;
 }
 
 .scene-container {
   grid-column-start: 2;
   grid-column-end: 4;
   grid-row-start: 1;
-  grid-row-end: 9;
+  grid-row-end: 4;
 }
 
 label {
