--- a/styles/main.css
+++ b/styles/main.css
@@ -84,3 +84,33 @@ p {
   background: #080808;
   background: linear-gradient(to bottom, #3b3b3b 0%, #2e2e2e 50%, #141414 51%, #080808 100%);
 }
+
+.Play {
+  display: inline-block;
+  outline: none;
+  padding: 10px 20px;
+  line-height: 1.4;
+  background: #c95b5b;
+  background: linear-gradient(to bottom, #daa8a8 0%, #cf9898 50%, #ca7373 51%, #c95b5b 100%);
+  border-radius: 4px;
+  border: 1px solid #000000;
+  color: #dadada;
+  text-shadow: #000000 -1px -1px 0px;
+  position: relative;
+  transition: padding-right 0.3s ease;
+  font-weight: 700;
+  box-shadow: 0 1px 0 #6e6e6e inset, 0px 1px 0 #3b3b3b;
+}
+
+.Play:hover {
+  box-shadow: 0 0 10px #080808 inset, 0px 1px 0 #3b3b3b;
+  color: #f3f3f3;
+}
+
+
+.Play:active {
+  box-shadow: 0 0 10px #080808 inset, 0px 1px 0 #3b3b3b;
+  color: #ffffff;
+  background: #080808;
+  background: linear-gradient(to bottom, #3b3b3b 0%, #2e2e2e 50%, #141414 51%, #080808 100%);
+}
