--- a/styles/main.css
+++ b/styles/main.css
@@ -3,8 +3,18 @@
   padding-top: 0;
 }
 
+html, body {
+  height: 100%;
+}
+
+html, body, .layout {
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   margin: 1em;
+  /* margin-bottom: -99999px; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
@@ -12,11 +22,14 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+  /* margin-bottom: -99999px;
+  padding-bottom: 99999px; */
 }
 
 .layout {
+  /* vertical-align: bottom; */
   width: 100%;
-
+  height: 100%;
   display: flex;
   gap: 25%;
 
@@ -26,14 +39,31 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: 250px 250px 250px 250px;
-  gap: 10px;
+  /* grid-template-columns: 1fr 1fr;
+  grid-template-rows: 50% 100%; */
+  grid: 'main main';
   background-color: #faed8a;
   padding: 10px;
+  gap: 10px;
+  height: 100%;
+  /* min-height: 100%; */
+  /* flex: auto; */
+  /* justify-items: stretch; */
+  /* align-items: stretch; */
+  /* min-height: 100%; */
 }
 
-.grid-container > div {
+.user-inputs, .scene-container {
+  color: #242424;
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 30px;
+  text-align: center;
+  /* box-sizing: border-box; */
+  height: 100%;
+  /* padding: 1px; */
+}
+
+/* .grid-container > div {
   background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
   padding: 20px 0;
@@ -52,7 +82,7 @@ body {
   grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 4;
-}
+} */
 
 label {
     margin: 1em auto;
@@ -197,4 +227,8 @@ p {
   border-radius: 14px;
   padding: 3px 17px;
   width: 129px;
+}
+
+.slider-range {
+  width: 85%;
 }
