--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,21 @@ body {
   /* align-items: stretch; */
   /* min-height: 100%; */
 }
+.intro {
+  display: flex;
+  background-color: #faed8a;
+  padding: 10px;
+  height: 100%;
+}
+
+.inner-intro {
+  color: #242424;
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 30px;
+  text-align: left;
+  height: 100%;
+  width: 100%;
+}
 
 .user-inputs, .scene-container {
   color: #242424;
@@ -61,6 +76,14 @@ body {
   /* box-sizing: border-box; */
   height: 100%;
   /* padding: 1px; */
+}
+
+.intro-content {
+  font-size: 20px;
+  text-align: left;
+  width: 100%;
+  margin: 1em;
+  max-width: 98%;
 }
 
 /* .grid-container > div {
