--- a/styles/main.css
+++ b/styles/main.css
@@ -149,6 +149,14 @@ p {
   background: linear-gradient(to bottom, #3b3b3b 0%, #2e2e2e 50%, #141414 51%, #080808 100%);
 }
 
+.Render:disabled {
+  /* box-shadow: 0 0 10px #080808 inset, 0px 1px 0 #3b3b3b;
+  color: #f3f3f3;
+  background: #080808;
+  background: linear-gradient(to bottom, #3b3b3b 0%, #2e2e2e 50%, #141414 51%, #080808 100%); */
+  visibility: hidden;
+}
+
 .Play {
   display: inline-block;
   outline: none;
@@ -179,17 +187,25 @@ p {
   background: linear-gradient(to bottom, #3b3b3b 0%, #2e2e2e 50%, #141414 51%, #080808 100%);
 }
 
+.Play:disabled {
+  /* box-shadow: 0 0 10px #080808 inset, 0px 1px 0 #3b3b3b;
+  color: #f3f3f3;
+  background: #080808;
+  background: linear-gradient(to bottom, #3b3b3b 0%, #2e2e2e 50%, #141414 51%, #080808 100%); */
+  visibility: hidden;
+}
+
 .Reset {
   display: inline-block;
   outline: none;
   padding: 10px 20px;
   line-height: 1.4;
-  background: #5a51da;
-  background: linear-gradient(to bottom, #aaa1df 0%, #8f8ccd 50%, #8972d5 51%, #6460af 100%);
+  background: #d1d1d2;
+  background: linear-gradient(to bottom, #fafafa 0%, #e3e3e3 50%, #cccccc 51%, #c1c1c1 100%);
   border-radius: 4px;
   border: 1px solid #000000;
-  color: #dadada;
-  text-shadow: #000000 -1px -1px 0px;
+  color: #000000;
+  text-shadow: #dddddd -1px -1px 0px;
   position: relative;
   transition: padding-right 0.3s ease;
   font-weight: 700;
@@ -198,7 +214,7 @@ p {
 
 .Reset:hover {
   box-shadow: 0 0 10px #080808 inset, 0px 1px 0 #3b3b3b;
-  color: #f3f3f3;
+  color: #675d5d;
 }
 
 
